<resources>
    <string name="app_name">Sample App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Espresso!</string>
    <string name="change_text">Change text</string>
    <string name="type_something">type something…</string>
    <string name="open_activity_and_change_text">Open activity and change text</string>
</resources>
